--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.3.0",
+    "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.3.0",
     "@mui/styles": "^5.3.0",
     "@mui/x-data-grid": "^5.2.2",
@@ -13,6 +16,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
