Fixed homepage for ghpages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jallenmanaloto.github.io/binary-health",
+  "homepage": "http://jallenmanaloto.github.io/Avion-Final-Project-React",
   "name": "final-project",
   "version": "0.1.0",
   "private": true,
