Changed name of app

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://jallenmanaloto.github.io/binary",
-  "name": "final-project",
+  "name": "binary",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
