Changed homepage name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jallenmanaloto.github.io/binary",
+  "homepage": "http://jallenmanaloto.github.io/binary-health",
   "name": "binary",
   "version": "0.1.0",
   "private": true,
